--- a/tex/step.tex
+++ b/tex/step.tex
@@ -11,6 +11,7 @@
   \ProgressHeight = 1.7;
   \CanvasMargin = 5;
   \LargeScale = 3.0;
+  \NormalScale = 2.0;
 }
 \tikzset{
   progress made/.style={fill=Orange2},
