Tweak pizzas. Highlight repo labels.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -136,8 +136,8 @@
   \Repo[south west]{Canvas.south west}{
     I/hash256/{Commit message.},
   }%
-  \Branch[Blue4]{hash256}{40:20}{-.5,0}{branch}
-  \Head{hash256}{155:20}{.5,0}
+  \Branch[Blue4][base][label]{hash256}{40:20}{-.5,0}{branch}
+  \Head[base][label]{hash256}{155:20}{.5,0}
 
   \Command[base]{0, 0}{git init}
 
@@ -180,8 +180,8 @@
     I/58d8fe0/{Merge commit.},
   }%
   \LocalRepoLabel{base west}{mine.west}{my machine}
-  \Branch[Blue4]{58d8fe0}{25:20}{-.5,0}{main}
-  \Head{58d8fe0}{155:20}{.5,0}
+  \Branch[Blue4][base][label]{58d8fe0}{25:20}{-.5,0}{main}
+  \Head[base][label]{58d8fe0}{155:20}{.5,0}
 
 
   \Repo[base west][hub][double]{-.75, .1}{
@@ -193,8 +193,8 @@
     I/58d8fe0/{Merge commit.},
   }%
   \RemoteRepoLabel{hub}{MyAccount}
-  \Branch[Blue4]{58d8fe0}{25:20}{-.5,0}{main}
-  \Head{58d8fe0}{155:20}{.5,0}
+  \Branch[Blue4][base][label]{58d8fe0}{25:20}{-.5,0}{main}
+  \Head[base][label]{58d8fe0}{155:20}{.5,0}
 
 
   \Repo[base][theirs][double]{.65, -1}{
@@ -206,8 +206,8 @@
     I/58d8fe0/{Merge commit.},
   }%
   \LocalRepoLabel{base east}{Canvas.east}{their machine}
-  \Branch[Blue4]{58d8fe0}{25:20}{-.5,0}{main}
-  \Head{58d8fe0}{155:20}{.5,0}
+  \Branch[Blue4][base][label]{58d8fe0}{25:20}{-.5,0}{main}
+  \Head[base][label]{58d8fe0}{155:20}{.5,0}
 
   \Command[center]{-.5, -.1}{git push}
   \Command[center]{+.5, -.1}{git fetch}
@@ -254,8 +254,8 @@
     I/58d8fe0/{Merge commit.},
   }%
   \LocalRepoLabel{base west}{mine.west}{my machine}
-  \Branch[Blue4]{58d8fe0}{25:20}{-.5,0}{main}
-  \Head{58d8fe0}{155:20}{.5,0}
+  \Branch[Blue4][base][label]{58d8fe0}{25:20}{-.5,0}{main}
+  \Head[base][label]{58d8fe0}{155:20}{.5,0}
 
 
   \Repo[base west][hub][double]{-.75, .1}{
@@ -267,8 +267,8 @@
     I/58d8fe0/{Merge commit.},
   }%
   \RemoteRepoLabel{hub}{MyAccount}
-  \Branch[Blue4]{58d8fe0}{25:20}{-.5,0}{main}
-  \Head{58d8fe0}{155:20}{.5,0}
+  \Branch[Blue4][base][label]{58d8fe0}{25:20}{-.5,0}{main}
+  \Head[base][label]{58d8fe0}{155:20}{.5,0}
 
 
   \Repo[base east][fork][double]{.75, .1}{
@@ -280,8 +280,8 @@
     I/58d8fe0/{Merge commit.},
   }%
   \RemoteRepoLabel{fork}{TheirAccount}
-  \Branch[Blue4]{58d8fe0}{25:20}{-.5,0}{main}
-  \Head{58d8fe0}{155:20}{.5,0}
+  \Branch[Blue4][base][label]{58d8fe0}{25:20}{-.5,0}{main}
+  \Head[base][label]{58d8fe0}{155:20}{.5,0}
 
   \Repo[base][theirs][double]{.65, -1}{
     I/hash256/{Commit message.},
@@ -292,8 +292,8 @@
     I/58d8fe0/{Merge commit.},
   }%
   \LocalRepoLabel{base east}{Canvas.east}{their machine}
-  \Branch[Blue4]{58d8fe0}{25:20}{-.5,0}{main}
-  \Head{58d8fe0}{155:20}{.5,0}
+  \Branch[Blue4][base][label]{58d8fe0}{25:20}{-.5,0}{main}
+  \Head[base][label]{58d8fe0}{155:20}{.5,0}
 
   \Command[center]{-.5, -.1}{git push}
   \Command[center]{+.5, -.1}{git fetch}
