--- a/tex/repo.tex
+++ b/tex/repo.tex
@@ -11,6 +11,7 @@
   \LabelIsep = 2;
   \CommitArrowShorten = \CommitRadius + 2;
   \LabelArrowShorten = \CommitRadius + 2;
+  \CommandScale = 4;
 }
 \tikzset{
   commit/.style={line width=2.0, fill=Orange3, draw=Dark3},
@@ -137,13 +138,14 @@
 
 }
 % Basic branch label.
-% [color][anchor][style]
-% {hash}{offset-from-commit}{local-arrow-start}{branch-name}
+% offset: position wrt commit position
+% local: starting point of the arrow in local coordinates.
+% [color][anchor][style]{hash}{offset}{local}{name}
 \NewDocumentCommand{\Branch}{ O{Blue4} O{base} O{label} m m m m }{
   \Label[#7][#1][#2][#3]{#4}{#5}{#6}{#7}
 }
-% Special HEAD label.
-% [anchor][style]{hash}{offset-from-commit}{local-arrow-start}
+% Same for HEAD label.
+% [anchor][style]{hash}{offset}{local}
 \NewDocumentCommand{\Head}{ O{base} O{label} m m m }{
   \Label[HEAD][Purple4][#1][#2]{#3}{#4}{#5}{HEAD}
   % Also highlight current commit.
@@ -155,7 +157,7 @@
   \IntensiveCoordinates{Canvas}{c}{#2}
   \node[repo label, anchor=#1] at (c) {#3};
 }
-% {anchor}{location}{accout-name}
+% {anchor}{location}{account}
 \newcommand{\RemoteRepoLabel}[3]{%
   \IntensiveCoordinates{Canvas}{c}{#2}
   \node[Blue4, repo label, anchor=#1] at (c)
@@ -163,9 +165,19 @@
       \tikz[baseline={(n.base)},inner sep=.5]{\node[fill=Yellow1](n){#3};}%
       /Pizzas};
 }
-% [left|right][bend]{start}{end}
+
+% [side][bend]{start}{end}
 \NewDocumentCommand{\RemoteArrow}{ O{left} O{50} m m }{
   \begin{scope}[transparency group, opacity=.5]
       \draw[-Stealth, line width=20, Brown2] (#3) to[bend #1=#2] (#4);
+  \end{scope}
+}
+
+% Display the command used.
+% [anchor]{location}{text}
+\NewDocumentCommand{\Command}{ O{base} m m }{
+  \begin{scope}[local to=Canvas]
+    \node[scale=\CommandScale, anchor=#1, inner sep=2, fill=Light4]
+      (command) at (#2) {\tt \$ #3};
   \end{scope}
 }
