Distinguish detached HEAD state.

--- a/tex/diff.tex
+++ b/tex/diff.tex
@@ -8,6 +8,7 @@
   \CodeMargins = 2;
   \CodeLineSpacing = 5;
   \SignOffset = 3;
+  \DiffFilesSpacing = 8;
 }
 \colorlet{plus}{Green5}
 \colorlet{minus}{Red5}
